# gpstime

./: CMakeLists.txt  README.md  SConscript
examples/: CMakeLists.txt  time-test.c  time-test.cpp
inc/: GPSTime.h
src/: CMakeLists.txt  GPSTime.c
